accpet it as is:(

--- a/main.css
+++ b/main.css
@@ -28,9 +28,11 @@ h1 {
   width: 100%;
   height: 100%;
   cursor: pointer;
-  background-color: black;
-  opacity: 0;
   z-index: 1;
+}
+
+.found{
+  border:4px solid red;  
 }
 .svg {
   position: absolute;
@@ -40,13 +42,48 @@ h1 {
 
 .sign {
   opacity: 0;
-  transition: 3s;
 }
 .dog {
   transform-origin: center;
   transform-box: fill-box;
-  transition: 3s;
-  transform: translateX(-200%) translateY(50%) scale(5) skewX(-20deg);
+  animation: dog 3s linear 1 forwards;
+  transform: rotateY(-360deg);
+}
+@keyframes dog {
+  0% {
+    transform: translateX(-50%);
+  }
+  50% {
+    transform: translateX(-150%) skewX(10deg) scale(2);
+  }
+  100% {
+    transform: translateX(-250%) skew(-10deg) scale(1.5);
+  }
+}
+.front-outer,
+.front-inner,
+.back-inner,
+.back-outer {
+  transform-origin: top;
+  transform-box: fill-box;
+  animation: walk 1s linear infinite;
+}
+@keyframes walk {
+  from {
+    transform: rotateZ(20deg);
+  }
+  to {
+    transform: rotateZ(-20deg);
+  }
+}
+.front-inner {
+  animation-delay: 0.2s;
+}
+.back-inner {
+  animation-delay: 0.4s;
+}
+.back-outer {
+  animation-delay: 0.2s;
 }
 /* svg1 */
 .watermill {
@@ -122,45 +159,20 @@ h1 {
 .fish {
   transform-origin: center;
   transform-box: fill-box;
-  animation: fish 3s ease-out 1 forwards;
+  animation: fish 3s ease-out infinite;
 }
 @keyframes fish {
-  0% {
-    transform: rotateZ(-180deg);
-  }
-  25% {
-    transform: rotateZ(-170deg);
-  }
-
-  50% {
-    transform: rotateZ(180deg) translate(-50%, -50%);
-  }
-  50% {
-    transform: rotateZ(180deg) translate(-50%, -50%);
-  }
-  100% {
-    transform: rotateZ(180deg) scale(0.9) translate(-40%, -65%);
+  to {
+    transform: rotateZ(360deg) translateY(-80%);
   }
 }
 .splashes {
-  transform-origin: center;
-  transform-box: fill-box;
-  animation: splashes 3s ease-out 1 forwards;
+  animation: splashes 3s ease-in infinite;
 }
 @keyframes splashes {
-  0% {
-    opacity: 0;
-    transform: translate(-150%, 50%) scale(1.5);
-  }
-  60% {
-    opacity: 1;
-  }
-  90% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-    transform: translate(-150%, 0%) scale(1.5);
+  to {
+    opacity: 0.7;
+    transform: rotateZ(360deg);
   }
 }
 /* svg5 */
@@ -220,44 +232,38 @@ h1 {
 .tree-move {
   transform-origin: top;
   transform-box: fill-box;
-  animation: tree 4s linear infinite forwards;
+  animation: tree 6s linear infinite;
 }
 @keyframes tree {
   0% {
     transform: rotateZ(0deg);
   }
-  35% {
-    transform: rotateX(3deg);
-  }
-  60% {
-    transform: rotateZ(5deg);
-  }
 
-  90% {
-    transform: rotateZ(3deg);
+  50% {
+    transform: rotateZ(-15deg);
   }
   100% {
     transform: rotateZ(0deg);
   }
 }
 #tree-two {
-  animation-delay: 0.5s;
+  animation-delay: 0.4s;
 }
 #tree-three {
-  animation-delay: 1s;
+  animation-delay: 0.6s;
 }
 
 #tree-four {
-  animation-delay: 1.5s;
+  animation-delay: 0.8s;
 }
 #tree-five {
-  animation-delay: 1.9s;
+  animation-delay: 1s;
 }
 #tree-six {
-  animation-delay: 2.2s;
+  animation-delay: 1.2s;
 }
 #tree-seven {
-  animation-delay: 2.5s;
+  animation-delay: 1.5s;
 }
 /* svg8 */
 .ducks {
