--- a/main.css
+++ b/main.css
@@ -3,16 +3,51 @@
   margin: 0;
   box-sizing: border-box;
 }
-h1 {
-  margin: 10px 0;
+body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
+}
+
+#again {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: calc(90vw + 170px);
+  max-height: 1100px;
+  background-color: #fff;
+  opacity: 0.8;
+  z-index: 5;
+}
+#result{
+  font-size: 1.4rem;
+  margin:40vw 0 15px;
+}
+h1 {
+  margin: 5px 0;
+  text-align: center;
+}
+
+.btn {
+  border: none;
+  font-size: 1.5rem;
+  color: yellow;
+  background-color: black;
+  border-radius: 5px;
+  padding: 0.5rem;
+  cursor: pointer;
+}
+.btn:hover {
+  transform: scale(1.1);
+  transition: all 1s;
 }
 .container {
   width: 90vw;
-  max-width: 960px;
+  max-width: 900px;
   margin: 10px auto;
   display: flex;
   justify-content: center;
+
   flex-wrap: wrap;
 }
 
@@ -31,8 +66,8 @@ h1 {
   z-index: 1;
 }
 
-.found{
-  border:4px solid red;  
+.found {
+  border: 4px solid red;
 }
 .svg {
   position: absolute;
@@ -374,4 +409,8 @@ h1 {
   100% {
     transform: rotateZ(-5deg);
   }
+}
+
+.hide {
+  display: none;
 }
